# BadLisp

./: CMakeLists.txt  README.md
src/: bad_lisp.c  bad_lisp.h  dynamic_string.c  dynamic_string.h  fileio.c  fileio.h  list.c  list.h  macros.c  macros.h  special_forms.c  special_forms.h  stack.h  transpile.c  transpile.h  util.c  util.h  vect.c  vect.h
src/datastructures/: list.c  list.h  vect.c  vect.h
src/util/: dynamic_string.h  fileio.c  stack.h  util.c  util.h
stdlib/: stdlib.blm
test/: main_test_runner.c  playground.bl  playground.bl.c  test1.bl  test_runner.c  testlib.c  testlib.h
test/playground/: macros.blm  playground.bl  playground_runner.c
test/scripts/: cleanoutput.bash  runplayground.bash  runtests.bash
test/tests/: test1.bl
